Metodo de exportación a txt agregado